# smart-home-system

./: CMakeLists.txt  README.md  main.cpp
include/controllers/: energy_monitor.hpp  home_controller.hpp  room_controller.hpp
include/devices/: device.hpp  security_camera.hpp  smart_light.hpp  thermostat.hpp
src/controllers/: energy_monitor.cpp  home_controller.cpp  room_controller.cpp
src/device/: device.cpp  device.hpp
src/devices/: device.cpp  security_camera.cpp  smart_light.cpp  thermostat.cpp
test/: test_devices.cpp
